# joe-jettchat-app

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  MIGRATION_NOTES.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: launch.json
app/: globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
app/agent/: page.tsx
app/agents/: page.tsx
app/api-dashboard/: page.tsx
app/chat/: page.tsx
app/gensys/: page.tsx
app/integrations/: page.tsx
app/notifications/: page.tsx
app/search/: page.tsx
app/settings/: page.tsx
app/spacecowboys/: page.tsx
app/threads/: page.tsx
components/: ConvexUserSync.tsx  SpacetimeUserSync.tsx
convex/: agents.ts  attestations.ts  channels.ts  conversations.ts  messageRequests.ts  messages.ts  schema.ts  seedAgents.ts  seedChannels.ts  users.ts
hooks/: useAttestation.ts  useEncryption.ts  useJettChatWS.ts  useOPTXProtocol.ts  useSession.ts  useSkillInvocation.ts  useSpacetimePoll.ts
lib/: attestation.ts  convex.ts  domains.ts  gate-check.ts  keystore.ts  metaplex-agent.ts  skills.ts  spacetimedb.ts  zitadel.ts
programs/jettchat-attestation/: Cargo.toml
programs/jettchat-attestation/src/: lib.rs
public/: font-compare.html
scripts/: init-protocol-devnet.ts  initialize-channels.ts  initialize-treasury.ts  setup-joe-delegate.ts
services/: Dockerfile.astrojoe-welcome  Dockerfile.survival-monitor  astrojoe-welcome-bot.ts  astrojoe-welcome.service  docker-compose.yml  survival-monitor.service  survival-monitor.ts
(+55 files in other folders)
