[package]
name = "jettchat-attestation"
version = "0.1.0"
description = "On-chain Merkle root attestations for JettChat encrypted channels"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jettchat_attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
solana-program = "1.18"

[dev-dependencies]
anchor-lang = "0.30.1"
